# Advent-of-Code-2025

./: LICENSE  README.md  pyproject.toml  template.ipynb
puzzles/: 01.ipynb
src/adventOfCode/: helpers.py  make_new_day.py  paths.py
templates/: template.ipynb
